# inv-sys

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 37870626322d_add_archived_field_to_configurations.py  3ecb10c398a4_add_order_reference_and_shipped_at_to_.py  b8cb12ce4027_create_initial_tables.py
backend/app/: main.py
backend/app/api/: assemblies.py  configurations.py  items.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  assembly.py  assembly_component.py  configuration.py  configuration_component.py  inventory_transaction.py  item.py
backend/app/schemas/: __init__.py  assembly.py  configuration.py  item.py
docs/: PROJECT_IDEAS.md
frontend/: .env.production  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AssemblyFormDialog.tsx  ConfigurationFormDialog.tsx  ItemFormDialog.tsx  Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Assemblies.tsx  Configurations.tsx  Dashboard.tsx  Items.tsx
terraform/: .gitignore
terraform/environments/staging/: main.tf  output.tf  providers.tf  variables.tf
